Kubernetes/ingress-http-routing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-routing
spec:
  rules:
    - http:
        paths:
          - path: /foo
            pathType: Prefix
            backend:
              service:
                name: clusterip-nginx-service
                port:
                  number: 80
