Kubernetes/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxnxx
spec:
  defaultBackend:
    service:
      name: clusterip-nginx-service
      port:
        number: 80
